# Text2Speech

./: CMakeLists.txt  README.md  Text2Speech.cpp  Text2Speech.h  Text2Speech.pro  Text2Speech.ui  main.cpp
